Limpieza de código en los RegularController